# eagle-eyes-backend

./: .env  dependencies.py  pyproject.toml  requirements.txt
api/: main.py
config/: settings.py
repositories/: deployment_repository.py  ops_repository.py
routers/: ops.py
scripts/: cleanup_ha_automations.py  run_deployments.py  validate_ha_behavior.py
services/: alerting.py  correlation.py  deployment_state.py  execute_deployments.py  ha_ack.py  payload.py  realtime_listener.py  retry_executor.py
worker/: main.py  realtime.py  scheduler.py
